assets/sass/externals/_pushy.scss
/* Pushy - v0.9.1 - 2013-9-16
* Pushy is a responsive off-canvas navigation menu using CSS transforms & transitions.
* https://github.com/christophery/pushy/
* by Christopher Yee */

.menu-button {
    border: 1px solid red;
    cursor: pointer;
    display: inline;
    .container--push & {
        border: 1px solid blue;
        }
    }

/* Menu Appearance */
.pushy {
    position: fixed;
    width: 200px;
    height: 100%;
    top: 0;
    right: 0;
    z-index: 9999;
    background: #333332;
    overflow: auto;
    box-shadow: inset -10px 0 6px -9px rgba(0, 0, 0, .7);
    -webkit-overflow-scrolling: touch; /* enables momentum scrolling in iOS overflow elements */
    }

    .pushy a {
        display: block;
        color: #b3b3b1;
        padding: 15px 30px;
        border-bottom: 1px solid rgba(0, 0, 0, .1);
        border-top: 1px solid rgba(255, 255, 255, .1);
        text-decoration: none;
        &:hover{
            background: #00b4ff;
            color: #FFF;
            }
        }

/* Menu Movement */

/* .pushy--left{
    transform: translate3d(-200px,0,0);
} */

.pushy--right {
    transform: translate3d(200px,0,0);
    }

.pushy--open {
    transform: translate3d(0,0,0);
    }

.container--push,
.push--push {
    transform: translate3d(0,0,0);
    }

/* Menu Transitions */
.pushy,
.container,
.push {
    transition: transform .2s cubic-bezier(.16, .68, .43, .99);
    /* improves performance issues on mobile*/
    -webkit-backface-visibility: hidden;
    -webkit-perspective: 1000;
    }

/* Site Overlay */
.site-overlay {
    display: none;
    .pushy--active & {
        display: block;
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        right: 200px;
        z-index: 9999;
        @include rgba-background($white, 0.75);
        }
    }

